manifests/example-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-app
  labels:
    name: example-app
    managed-by: argocd
